--- a/1P/index.html
+++ b/1P/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="container">
     <header>
-        <img src="/images/apj.jpg" alt="tribute">
+        <img src="/1P/images/apj.jpg" alt="tribute">
         <div id="name">
-            <h1>A.P.J. Abdul Kalam</h1>
+            <h1>A.P.J.<h2>Abdul Kalam</h2></h1>
             <p>1931-2015</p>
         </div>
     </header>
