Update image url's

--- a/5P/index.html
+++ b/5P/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/images/logo.png" alt="logo">
+            <img src="/5P/images/logo.png" alt="logo">
         </div>
         <div class="bar-menu">
             <i class="fas fa-bars" aria-hidden="true"></i>
@@ -21,7 +21,7 @@
     <main>
         <section class="hero-page">
             <div class="hero-image">
-                <img src="/images/hero_image.png" alt="hero-image">
+                <img src="/5P/images/hero_image.png" alt="hero-image">
             </div>
             <div class="hero-text">
                 <div>
@@ -39,7 +39,7 @@
         <section class="service">
             <div class="box">
                 <div>
-                    <img src="/icons/discount.png" alt="disc voucher">
+                    <img src="/5P/icons/discount.png" alt="disc voucher">
                 </div>
                 <div class="text">
                     <h3>Discount Voucher</h3>
@@ -48,7 +48,7 @@
             </div>
             <div class="box">
                 <div>
-                    <img src="/icons/fresh.png" alt="disc voucher">
+                    <img src="/5P/icons/fresh.png" alt="disc voucher">
                 </div>
                 <div class="text">
                     <h3>Fresh Health Food</h3>
@@ -57,7 +57,7 @@
             </div>
             <div class="box">
                 <div>
-                    <img src="/icons/delivery.png" alt="disc voucher">
+                    <img src="/5P/icons/delivery.png" alt="disc voucher">
                 </div>
                 <div class="text">
                     <h3>Fast Home Delivery</h3>
@@ -74,19 +74,19 @@
                 <h2>Explore Our Menu</h2>
             </div>
             <div class="grid-container">
-                <div id="i1"><img src="/images/grid_image1.png" alt="image1"></div>
-                <div id="i2"><img src="/images/grid_image2.png" alt="image2"></div>
-                <div id="i3"><img src="/images/grid_image3.png" alt="image3"></div>
-                <div id="i4"><img src="/images/grid_image4.png" alt="image4"></div>
-                <div id="i5"><img src="/images/grid_image5.png" alt="image5"></div>
-                <div id="i6"><img src="/images/grid_image6.png" alt="image6"></div>
-                <div id="i7"><img src="/images/grid_image7.png" alt="image7"></div>
+                <div id="i1"><img src="/5P/images/grid_image1.png" alt="image1"></div>
+                <div id="i2"><img src="/5P/images/grid_image2.png" alt="image2"></div>
+                <div id="i3"><img src="/5P/images/grid_image3.png" alt="image3"></div>
+                <div id="i4"><img src="/5P/images/grid_image4.png" alt="image4"></div>
+                <div id="i5"><img src="/5P/images/grid_image5.png" alt="image5"></div>
+                <div id="i6"><img src="/5P/images/grid_image6.png" alt="image6"></div>
+                <div id="i7"><img src="/5P/images/grid_image7.png" alt="image7"></div>
             </div>
         </section>
     </main>
     <footer>
         <div class="company">
-            <img src="/images/logo.png" alt="logo">
+            <img src="/5P/images/logo.png" alt="logo">
         </div>
         <div class="links">
             <h3>Main Links</h3>
